--- a/public/css/style-home.css
+++ b/public/css/style-home.css
@@ -194,3 +194,170 @@
         width: 100%;
     }
 }
+
+.logo_name{
+    font-size: 22px;
+    font-weight: 600;
+    color: var(--text-color);
+    margin-left: 14px;
+    transition: var(--tran-05);
+}
+
+/* CSS Daftar Pengguna */
+
+.card-grid{
+    display: block;
+    grid-template-columns: repeat(2, 1fr);
+    column-gap: 1.5rem;
+    row-gap: 1.5rem;
+    border: solid var(--media2-color);
+    background-clip: border-box;
+    border-radius: 15px 15px 15px 15px;
+    min-width: 0;
+    word-wrap: break-word;
+    padding: 12px;
+}
+.dash-content .title2{
+    display: flex;
+    align-items: center;
+    margin: 60px 0 30px 0;
+}
+.dash-content .title2 i{
+    position: relative;
+    height: 35px;
+    width: 35px;
+    background-color: var(--media2-color);
+    border-radius: 6px;
+    color: var(--title-icon-color);
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+}
+.dash-content .title2 .text{
+    font-size: 24px;
+    font-weight: 500;
+    color: var(--text-color);
+    margin-left: 10px;
+}
+.up{
+    position: relative;
+    display: flex;
+    flex-wrap: nowrap;
+    flex-direction: row;
+    justify-content: space-between;
+}
+.space{
+    padding: 20px 20px 20px 20px;
+}
+.button-tambah{
+	font: inherit;
+	color: inherit;
+	text-decoration: none;
+	display: inline-flex;
+	align-items: center;
+	justify-content: center;
+	padding: 0 1em;
+	height: 40px;
+	border-radius: 8px;
+	line-height: 1;
+	border: 2px solid var(--c-border-primary);
+	color: var(--c-text-action);
+	font-size: 0.875rem;
+	transition: 0.15s ease;
+	background-color: var(--c-background-primary);
+}
+.btn-tambah{
+    border: 2px solid var(--text4-color);
+    border-radius: 10px;
+    padding: 4px;
+    width: 19.5%;
+}
+.btn-tambah{
+    z-index: 2;
+    transition: all 0.3s ease;
+    overflow: hidden;
+}
+.btn-tambah:after {
+    position: absolute;
+    content: " ";
+    z-index: -1;
+    top: 0;
+    left: 0;
+
+    transition: all 0.3s ease;
+}
+.btn-tambah:hover {
+    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                -4px -4px 6px 0 rgba(37, 177, 60, 0.589),
+      inset -4px -4px 6px 0 rgba(255,255,255,.5),
+      inset 4px 4px 6px 0 rgba(116, 125, 136, .3);
+    color: var(--text4-color);
+}
+.btn-tambah:hover:after {
+    -webkit-transform: scale(2) rotate(180deg);
+    transform: scale(2) rotate(180deg);
+    background: var(--text4-color);
+    box-shadow:  4px 4px 6px 0 rgba(255,255,255,.5),
+                -4px -4px 6px 0 rgba(62, 175, 71, 0.582),
+      inset -4px -4px 6px 0 rgba(26, 218, 83, 0.5),
+      inset 4px 4px 6px 0 rgba(31, 126, 39, 0.3);
+}
+.view{
+    width: 100%;
+}
+.view td {
+    border-bottom: 1px solid #ddd;
+}
+/* EVEN */
+.view tr:nth-child(even) {
+    background: var(--media3-color);
+}
+/* ODD */
+.view tr:nth-child(odd) {
+    background: var(--title-icon-color);
+    border-radius: 10px;
+}
+
+.ubah {
+    display: block;
+    width: 6rem;
+    text-decoration: none;
+    margin-right: 4rem;
+    margin-top: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #FFF;
+    background-color: var(--box-btn1-color);
+    border: none;
+    background-clip: padding-box;
+    appearance: none;
+    border-radius: 10px;
+    padding: 0.65rem 1rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.hapus {
+    display: block;
+    width: 6rem;
+    text-decoration: none;
+    margin-right: 4rem;
+    margin-top: 16px;
+    font-weight: 400;
+    line-height: 1.5;
+    color: #FFF;
+    background-color: var(--box-btn3-color);
+    border: none;
+    background-clip: padding-box;
+    appearance: none;
+    border-radius: 10px;
+    padding: 0.65rem 1rem;
+    transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+.text-center{
+    display: flex;
+    justify-content: center;
+    align-content: space-around;
+}
+
+/* MODAL */
+
